--- a/index.html
+++ b/index.html
@@ -4,23 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rummy Grand - India's No.1 Gaming Site</title>
-
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GJ9DX82KBB"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-GJ9DX82KBB');
-  </script>
-
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
       text-align: center;
-      background: #ffffff;
+      background: #fff;
       color: #333;
       padding: 20px;
     }
@@ -38,19 +27,30 @@
       margin: 20px auto;
     }
 
-    .download-btn, .contact-btn {
+    .timer {
+      font-size: 5vw;
+      color: red;
+      font-weight: bold;
+      margin: 20px 0;
+    }
+
+    .download-btn {
       background-color: #007bff;
       color: #fff;
       border: none;
       padding: 15px 30px;
       font-size: 5vw;
-      border-radius: 10px;
+      border-radius: 5px;
       cursor: pointer;
-      margin: 15px auto;
-      display: block;
+      margin-bottom: 30px;
+      display: inline-block;
       text-decoration: none;
       width: 90%;
       max-width: 400px;
+    }
+
+    .download-btn:hover {
+      background-color: #0056b3;
     }
 
     .features {
@@ -76,10 +76,21 @@
 
     @media (min-width: 600px) {
       h1 { font-size: 24px; }
-      .download-btn, .contact-btn { font-size: 18px; }
+      .timer { font-size: 20px; }
+      .download-btn { font-size: 18px; }
       .features { font-size: 16px; }
     }
   </style>
+
+  <!-- ✅ Google Analytics 4 (Replace G-XXXXXXX with your actual Measurement ID) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXX');
+  </script>
+
 </head>
 <body>
 
@@ -87,11 +98,11 @@
 
   <img src="273702ce-f08e-4d00-a0f8-9cbc61aea1f4.png" alt="Rummy Grand" class="logo"/>
 
-  <a href="#" class="download-btn">
+  <div class="timer" id="timer">00 : 00 : 02</div>
+
+  <a href="https://tinyurl.com/4ey9jwwk" class="download-btn" id="download">
     ⬇️ DOWNLOAD AND PLAY<br><small>Click here</small>
   </a>
-
-  <a href="https://t.me/Vidhya712" class="contact-btn">📩 Contact Us on Telegram</a>
 
   <div class="features">
     <p><span>✔️</span><span class="orange">FREE BONUS FAST REGISTER</span></p>
@@ -99,6 +110,34 @@
     <p><span>✔️</span><span class="green">SUPER FAST DIPOSIT</span></p>
     <p><span>✔️</span><span class="red">FREE DIPOSIT BONUS</span></p>
   </div>
+
+  <script>
+    let countdown = 2;
+    const timerElement = document.getElementById('timer');
+    const downloadLink = document.getElementById('download');
+
+    const interval = setInterval(() => {
+      countdown--;
+      let sec = countdown < 10 ? '0' + countdown : countdown;
+      timerElement.textContent = `00 : 00 : ${sec}`;
+      if (countdown === 0) {
+        clearInterval(interval);
+        // ✅ Track redirect
+        gtag('event', 'auto_redirect', {
+          event_category: 'engagement',
+          event_label: '2s_redirect'
+        });
+        window.location.href = downloadLink.href;
+      }
+    }, 1000);
+
+    downloadLink.addEventListener('click', () => {
+      gtag('event', 'manual_click', {
+        event_category: 'button',
+        event_label: 'Download and Play'
+      });
+    });
+  </script>
 
 </body>
 </html>
