--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
     }
   </style>
 
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GJ9DX82KBB"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N3FERK3695"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-GJ9DX82KBB');
+  gtag('config', 'G-N3FERK3695');
 </script>
 
 </head>
