--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
   </style>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-N3FERK3695"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GJ9DX82KBB"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-N3FERK3695');
+  gtag('config', 'G-GJ9DX82KBB');
 </script>
 
 </head>
