--- a/index.html
+++ b/index.html
@@ -82,17 +82,16 @@
     }
   </style>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GJ9DX82KBB"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-GJ9DX82KBB');
-</script>
-
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GJ9DX82KBB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-GJ9DX82KBB');
+  </script>
 </head>
+
 <body>
 
   <h1>INDIA'S NO 1 GAMING SITE</h1>
@@ -108,8 +107,8 @@
   <div class="features">
     <p><span>✔️</span><span class="orange">FREE BONUS FAST REGISTER</span></p>
     <p><span>✔️</span><span class="purple">SUPER FAST WITHDRAWAL</span></p>
-    <p><span>✔️</span><span class="green">SUPER FAST DIPOSIT</span></p>
-    <p><span>✔️</span><span class="red">FREE DIPOSIT BONUS</span></p>
+    <p><span>✔️</span><span class="green">SUPER FAST DEPOSIT</span></p>
+    <p><span>✔️</span><span class="red">FREE DEPOSIT BONUS</span></p>
   </div>
 
   <script>
