--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rummy Grand - India's No.1 Gaming Site</title>
+  <title>Rummy Loot - India's No.1 Gaming Site</title>
   <style>
     body {
       margin: 0;
@@ -28,7 +28,7 @@
     }
 
     .timer {
-      font-size: 5vw;
+      font-size: 6vw;
       color: red;
       font-weight: bold;
       margin: 20px 0;
@@ -76,7 +76,7 @@
 
     @media (min-width: 600px) {
       h1 { font-size: 24px; }
-      .timer { font-size: 20px; }
+      .timer { font-size: 24px; }
       .download-btn { font-size: 18px; }
       .features { font-size: 16px; }
     }
@@ -86,7 +86,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-GJ9DX82KBB"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag(){ dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-GJ9DX82KBB');
   </script>
@@ -96,9 +96,9 @@
 
   <h1>INDIA'S NO 1 GAMING SITE</h1>
 
-  <img src="273702ce-f08e-4d00-a0f8-9cbc61aea1f4.png" alt="Rummy Grand" class="logo"/>
+  <img src="273702ce-f08e-4d00-a0f8-9cbc61aea1f4.png" alt="Rummy Loot" class="logo"/>
 
-  <div class="timer" id="timer">00 : 00 : 05</div>
+  <div class="timer" id="timer">5</div>
 
   <a href="https://tinyurl.com/4ey9jwwk" class="download-btn" id="download">
     ⬇️ DOWNLOAD AND PLAY<br><small>Click here</small>
@@ -118,8 +118,7 @@
 
     const interval = setInterval(() => {
       countdown--;
-      let sec = countdown < 10 ? '0' + countdown : countdown;
-      timerElement.textContent = `00 : 00 : ${sec}`;
+      timerElement.textContent = countdown;
       if (countdown === 0) {
         clearInterval(interval);
         // ✅ Track redirect
