--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rummy Loot - India's No.1 Gaming Site</title>
+  <title>Rummy Grand - India's No.1 Gaming Site</title>
   <style>
     body {
       margin: 0;
@@ -79,17 +79,9 @@
       .timer { font-size: 24px; }
       .download-btn { font-size: 18px; }
       .features { font-size: 16px; }
-    }
+    
   </style>
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GJ9DX82KBB"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){ dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-GJ9DX82KBB');
-  </script>
 </head>
 
 <body>
@@ -100,7 +92,7 @@
 
   <div class="timer" id="timer">5</div>
 
-  <a href="https://tinyurl.com/4ey9jwwk" class="download-btn" id="download">
+  <a href="https://tinyurl.com/trust-rummyapp" class="download-btn" id="download">
     ⬇️ DOWNLOAD AND PLAY<br><small>Click here</small>
   </a>
 
