--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rummy Grand - India's No.1 Gaming Site</title>
+  <title>Rummy Grand - Rummy Grand Hack Mod ver1.2.1</title>
   <style>
     body {
       margin: 0;
@@ -86,7 +86,7 @@
 
 <body>
 
-  <h1>INDIA'S NO 1 GAMING SITE</h1>
+  <h1>Rummy Grand Hack Mod ver1.2.1</h1>
 
   <img src="273702ce-f08e-4d00-a0f8-9cbc61aea1f4.png" alt="Rummy Loot" class="logo"/>
 
@@ -97,6 +97,7 @@
   </a>
 
   <div class="features">
+    <p><span>✔️</span><span class="orange">99% Winrate Hack</span></p>
     <p><span>✔️</span><span class="orange">FREE BONUS FAST REGISTER</span></p>
     <p><span>✔️</span><span class="purple">SUPER FAST WITHDRAWAL</span></p>
     <p><span>✔️</span><span class="green">SUPER FAST DEPOSIT</span></p>
