--- a/index.html
+++ b/index.html
@@ -88,12 +88,10 @@
 
   <h1>Rummy Grand Hack Mod ver1.2.1</h1>
 
-  <img src="273702ce-f08e-4d00-a0f8-9cbc61aea1f4.png" alt="Rummy Loot" class="logo"/>
-
   <div class="timer" id="timer">5</div>
 
   <a href="https://tinyurl.com/trust-rummyapp" class="download-btn" id="download">
-    ⬇️ DOWNLOAD AND PLAY<br><small>Click here</small>
+    ⬇️ DOWNLOAD MOD AND PLAY<br><small>Click here</small>
   </a>
 
   <div class="features">
